<!-- Copyright 2021 Nicholas Hochstetler
   ~ You may not use this file except in compliance with the Apache License
   ~ Version 2.0, obtainable at http://www.apache.org/licenses/LICENSE-2.0
   ~ or in the file LICENSE in the project's root directory. -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/change_sorting_menu">
    <group android:id="@+id/sorting_options_group"
        android:checkableBehavior="single" >
        <item android:id="@+id/color_option"
            android:title="@string/color_description" />
        <item android:id="@+id/name_ascending_option"
            android:title="@string/name_ascending_description" />
        <item android:id="@+id/name_descending_option"
            android:title="@string/name_descending_description" />
        <item android:id="@+id/amount_ascending_option"
            android:title="@string/amount_ascending_description" />
        <item android:id="@+id/amount_descending_option"
            android:title="@string/amount_descending_description" />
    </group>
</menu>