<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2020 Nicholas Hochstetler
  ~  You may not use this file except in compliance with the Apache License
  ~  Version 2.0, obtainable at http://www.apache.org/licenses/LICENSE-2.0
  ~  or in the file LICENSE in the project's root directory. -->

<com.cliffracermerchant.bootycrate.ShoppingListRecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shoppingListRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    style="@style/RecyclerViewFragment" />