<!-- Copyright 2021 Nicholas Hochstetler
   ~ You may not use this file except in compliance with the Apache License
   ~ Version 2.0, obtainable at http://www.apache.org/licenses/LICENSE-2.0
   ~ or in the file LICENSE in the project's root directory. -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
    tools:layout_height="?attr/actionBarSize">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:contentDescription="@string/back_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/backButtonSpacer"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:importantForAccessibility="no"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/title_switcher"/>

    <com.cliffracertech.bootycrate.view.ActionBarTitle
        android:id="@+id/title_switcher"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/backButtonSpacer"
        app:layout_constraintEnd_toStartOf="@id/searchButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginStart="20dp"
        style="?attr/actionBarTitleStyle" />

    <!-- Without a maxWidth, the searchView will expand until it covers up the
         back button, even when it is constrained to the end of customTitle -->
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/searchButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toStartOf="@id/changeSortButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/search_description"
        android:padding="12dp"
        android:src="@drawable/search_and_close" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/changeSortButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/menuButton"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="12dp"
        android:contentDescription="@string/change_sorting_description"
        android:src="@drawable/change_sort_and_delete" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/menuButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="12dp"
        android:contentDescription="@string/menu_button_description"
        android:src="@drawable/ic_more_vert_black_24dp" />
</merge>