<!-- Copyright 2021 Nicholas Hochstetler
   ~ You may not use this file except in compliance with the Apache License
   ~ Version 2.0, obtainable at http://www.apache.org/licenses/LICENSE-2.0
   ~ or in the file LICENSE in the project's root directory. -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/shoppingListFragmentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.cliffracertech.bootycrate.recyclerview.ShoppingListView
        android:id="@+id/shoppingListView"
        android:layout_width="match_parent"
...
